// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/ActiontechTable-hooks-useTableAction -renderAction render btn click confirm 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1uxy5k6"
    data-testid="test-button"
    type="button"
  >
    <span>
      删 除
    </span>
  </button>
</div>
`;

exports[`lib/ActiontechTable-hooks-useTableAction -renderAction render btn click fn 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default ant-btn-sm ant-btn-block actiontech-table-actions-button test-btn-click basic-button-wrapper css-1uxy5k6"
    data-testid="test-button"
    type="button"
  >
    <span>
      增 加
    </span>
  </button>
</div>
`;

exports[`lib/ActiontechTable-hooks-useTableAction -renderAction render btn is disabled 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1uxy5k6"
    data-testid="add"
    disabled=""
    type="button"
  >
    <span>
      增 加
    </span>
  </button>
</div>
`;

exports[`lib/ActiontechTable-hooks-useTableAction -renderAction render btn when action type is "navigate-link" 1`] = `
<div>
  <a
    href="/home"
  >
    <button
      class="ant-btn ant-btn-default ant-btn-sm ant-btn-block actiontech-table-actions-button test-btn-click basic-button-wrapper css-1uxy5k6"
      data-testid="test-button"
      type="button"
    >
      <span>
        编 辑
      </span>
    </button>
  </a>
</div>
`;

exports[`lib/ActiontechTable-hooks-useTableAction -renderAction render use renderAction 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default ant-btn-sm ant-btn-block actiontech-table-actions-button basic-button-wrapper css-1uxy5k6"
        data-testid="add"
        type="button"
      >
        <span>
          增 加
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-1uxy5k6"
        data-testid="delete"
        type="button"
      >
        <span>
          删 除
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`lib/ActiontechTable-hooks-useTableAction -renderActionInTable render button & moreButtons 1`] = `
<div>
  <div
    class="css-new95e"
  >
    <button
      class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1uxy5k6"
      type="button"
    >
      <span>
        增 加
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only actiontech-table-actions-button actiontech-table-actions-more-button basic-button-wrapper css-1uxy5k6"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <svg
          color="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.333 6.667C2.6 6.667 2 7.267 2 8s.6 1.333 1.333 1.333c.734 0 1.334-.6 1.334-1.333s-.6-1.333-1.334-1.333m9.334 0c-.734 0-1.334.6-1.334 1.333s.6 1.333 1.334 1.333C13.4 9.333 14 8.733 14 8s-.6-1.333-1.333-1.333M8 6.667c-.733 0-1.333.6-1.333 1.333S7.267 9.333 8 9.333 9.333 8.733 9.333 8 8.733 6.667 8 6.667"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`lib/ActiontechTable-hooks-useTableAction -renderActionInTable render buttons 1`] = `
{
  "className": "actiontech-table-actions-column",
  "dataIndex": "operator",
  "fixed": "right",
  "render": [Function],
  "title": [Function],
  "width": 246,
}
`;

exports[`lib/ActiontechTable-hooks-useTableAction -renderActionInTable render buttons 2`] = `
<div>
  <div
    class="css-new95e"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <button
          class="ant-btn ant-btn-default ant-btn-sm ant-btn-block actiontech-table-actions-button basic-button-wrapper css-1uxy5k6"
          data-testid="add"
          type="button"
        >
          <span>
            增 加
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-1uxy5k6"
          data-testid="delete"
          type="button"
        >
          <span>
            删 除
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/ActiontechTable-hooks-useTableAction -renderActionInTable render moreButtons 1`] = `
<div>
  <div
    class="css-new95e"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <button
          class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1uxy5k6"
          type="button"
        >
          <span>
            编 辑
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1uxy5k6"
          type="button"
        >
          <span>
            删 除
          </span>
        </button>
      </div>
    </div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only actiontech-table-actions-button actiontech-table-actions-more-button basic-button-wrapper css-1uxy5k6"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <svg
          color="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.333 6.667C2.6 6.667 2 7.267 2 8s.6 1.333 1.333 1.333c.734 0 1.334-.6 1.334-1.333s-.6-1.333-1.334-1.333m9.334 0c-.734 0-1.334.6-1.334 1.333s.6 1.333 1.334 1.333C13.4 9.333 14 8.733 14 8s-.6-1.333-1.333-1.333M8 6.667c-.733 0-1.333.6-1.333 1.333S7.267 9.333 8 9.333 9.333 8.733 9.333 8 8.733 6.667 8 6.667"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`lib/ActiontechTable-hooks-useTableAction -renderActionInTable render moreButtons when it is a function 1`] = `
<div>
  <div
    class="css-new95e"
  >
    <button
      class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1uxy5k6"
      type="button"
    >
      <span>
        增 加
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only actiontech-table-actions-button actiontech-table-actions-more-button basic-button-wrapper css-1uxy5k6"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <svg
          color="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.333 6.667C2.6 6.667 2 7.267 2 8s.6 1.333 1.333 1.333c.734 0 1.334-.6 1.334-1.333s-.6-1.333-1.334-1.333m9.334 0c-.734 0-1.334.6-1.334 1.333s.6 1.333 1.334 1.333C13.4 9.333 14 8.733 14 8s-.6-1.333-1.333-1.333M8 6.667c-.733 0-1.333.6-1.333 1.333S7.267 9.333 8 9.333 9.333 8.733 9.333 8 8.733 6.667 8 6.667"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`lib/ActiontechTable-hooks-useTableAction -renderActionInTable render normal columns 1`] = `
{
  "className": "actiontech-table-actions-column",
  "dataIndex": "operator",
  "fixed": "right",
  "render": [Function],
  "title": [Function],
  "width": 82,
}
`;
